fighting with content box

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					Главная страница сейчас не сильно заполненна, gно я надеюсь что это временно с:</p>
 			</div>
 		</div>
-    <div class="container">
+		<div class="container">
 			<div class="container_img">
 				<img src="images/7.jpg" alt="Typing man">
 			</div>
@@ -47,7 +47,25 @@
 				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
 					Главная страница сейчас не сильно заполненна, gно я надеюсь что это временно с:</p>
 			</div>
-		</div>tur adipisicing elit. Nihil, quae, vitae? Accusamus assumenda atque, distinctio exercitationem expedita facilis, hic magnam modi nesciunt nisi quae quis, reprehenderit. Aliquid deleniti distinctio dolor in iste, magni, obcaecati odio quam, quis quisquam quo reprehenderit sint tempora vel velit. Aliquam amet animi asperiores commodi cupiditate deleniti deserunt dicta dolores dolorum eius est impedit iste maiores modi nam nobis omnis pariatur perspiciatis placeat porro quas, quasi qui quia quis quisquam quod ratione recusandae reprehenderit rerum sed sit suscipit tenetur voluptas. Animi delectus dignissimos expedita impedit in ipsam possimus vero. Animi aperiam commodi culpa cupiditate dicta distinctio doloremque dolorum error est ex exercitationem facere fugit impedit inventore ipsa itaque maxime modi natus, neque, nisi obcaecati perspiciatis porro quaerat quas quasi quos similique totam velit veniam vitae voluptatem voluptates voluptatibus voluptatum. Animi architecto aspernatur assumenda cumque delectus deleniti dolor dolorem expedita facere illum, in incidunt iure iusto omnis porro quas, repudiandae sint! Ab ad aliquam amet animi asperiores beatae, commodi corporis dolorum eligendi hic illo in incidunt magnam maiores natus obcaecati officiis quae quas quisquam quos repellat repellendus unde? Asperiores at beatae dolorum ea eligendi est, et, eveniet exercitationem expedita maxime molestiae necessitatibus nisi non odit pariatur perferendis placeat quisquam recusandae rem tempora vel voluptatem, voluptatibus voluptatum. Ad, aliquid animi atque corporis cum distinctio, dolor dolorum eligendi, eos excepturi exercitationem expedita in itaque maiores recusandae reiciendis repellendus tempore voluptas voluptates voluptatibus! Accusamus aliquam at debitis, ducimus explicabo id nisi non nostrum quibusdam sequi! Accusantium, ad autem beatae corporis, dolore enim facilis harum ipsam maxime nesciunt non officia praesentium quae quas quasi quibusdam quis quisquam quod quos ratione rerum similique sit veritatis voluptatem voluptatum! Beatae dolorum eaque maxime officia sunt totam vel veritatis. A ad aliquam doloribus laboriosam molestias nulla. Alias aliquam amet commodi consectetur cum cupiditate esse et eum eveniet facere facilis ipsum iure libero magnam maxime minima natus nisi numquam odio odit officiis optio pariatur placeat quia quos sapiente sed sequi soluta tempore, voluptate. Adipisci culpa deserunt dignissimos, distinctio eaque ex excepturi illum minus neque, optio, provident quasi quia quibusdam? Aut consequuntur dignissimos error eveniet hic id ipsum laboriosam libero natus nobis, placeat quasi quo quos totam voluptatum. Expedita fuga illo nam nisi perferendis quasi ratione repudiandae. Aliquam, aperiam asperiores autem beatae blanditiis consequatur culpa cum dicta dolore doloremque doloribus exercitationem explicabo ipsa iste iure laborum molestiae mollitia nihil odio omnis quaerat quam quod repellendus reprehenderit repudiandae sit sunt temporibus veniam vitae voluptatum. Natus officia perferendis sunt tenetur! Ad alias dicta ducimus earum expedita, impedit in laudantium pariatur quas quia quo repudiandae tenetur voluptate? Autem debitis laudantium recusandae voluptatem! A ab alias amet animi autem debitis deleniti dignissimos dolorem dolores eaque eligendi exercitationem ipsa, ipsam laborum laudantium modi mollitia necessitatibus nemo numquam omnis porro possimus quo rerum, sapiente tempora tenetur unde vel? Ea ipsam ipsum iure optio repellat. Alias animi atque cumque dolores eum hic itaque quas, quia? Aliquam cupiditate doloremque ipsa molestiae omnis quidem sequi tempora, totam unde voluptatum? Aperiam eligendi impedit incidunt numquam possimus voluptatem.</p>
+		</div>
+		<div class="container">
+			<div class="container_img">
+				<img src="images/7.jpg" alt="Typing man">
+			</div>
+			<div class="container_text">
+				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
+					Главная страница сейчас не сильно заполненна, gно я надеюсь что это временно с:</p>
+			</div>
+		</div>
+		<div class="container">
+			<div class="container_img">
+				<img src="images/7.jpg" alt="Typing man">
+			</div>
+			<div class="container_text">
+				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
+					Главная страница сейчас не сильно заполненна, gно я надеюсь что это временно с:</p>
+			</div>
+		</div>
 </div>
 <script src="script.js"></script>
 </body>
