--- a/index.html
+++ b/index.html
@@ -36,7 +36,19 @@
 			</div>
 			<div class="container_text">
 				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
-					Главная страница сейчас не сильно заполненна, gно я надеюсь что это временно с:</p>
+					Главная страница сейчас не сильно заполненна, но я надеюсь что это временно с:</p>
+			</div>
+		</div>
+		<div class="container">
+		sd	
+		</div>
+		<div class="container">
+			<div class="container_img">
+				<img src="images/7.jpg" alt="Typing man">
+			</div>
+			<div class="container_text">
+				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
+					Главная страница сейчас не сильно заполненна, но я надеюсь что это временно с:</p>
 			</div>
 		</div>
 		<div class="container">
@@ -45,25 +57,7 @@
 			</div>
 			<div class="container_text">
 				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
-					Главная страница сейчас не сильно заполненна, gно я надеюсь что это временно с:</p>
-			</div>
-		</div>
-		<div class="container">
-			<div class="container_img">
-				<img src="images/7.jpg" alt="Typing man">
-			</div>
-			<div class="container_text">
-				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
-					Главная страница сейчас не сильно заполненна, gно я надеюсь что это временно с:</p>
-			</div>
-		</div>
-		<div class="container">
-			<div class="container_img">
-				<img src="images/7.jpg" alt="Typing man">
-			</div>
-			<div class="container_text">
-				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
-					Главная страница сейчас не сильно заполненна, gно я надеюсь что это временно с:</p>
+					Главная страница сейчас не сильно заполненна, но я надеюсь что это временно с:</p>
 			</div>
 		</div>
 </div>
