--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
 			</div>
 		</div>
 		<div class="container">
-			<canvas id="myskills" width="100px" height="100px" ></canvas>
+			<div class="chartBox">
+			<canvas id="myskills" width="250" height="100" ></canvas>
+			</div>
+			<div class="container_text">
+				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
+					Главная страница сейчас не сильно заполненна, но я надеюсь что это временно с:</p>
+			</div>	
 		</div>
 		<div class="container">
 			<div class="container_img">
