trying another variant

--- a/js-game/index.html
+++ b/js-game/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="style.css" type="text/css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>The best game what I ever made</title>
+    <meta charset="utf-8" />
+    <title>Gamedev Canvas Workshop - lesson 5: game over</title>
+    <style>* { padding: 0; margin: 0; } canvas { background: #eee; display: block; margin: 0 auto; }</style>
 </head>
 <body>
-	<canvas id="canvas" width="1920" height="1080"></canvas>
+
+<canvas id="myCanvas" width="1000" height="500"></canvas>
 <script src="main.js"></script>
 </body>
 </html>
