--- a/site/index.html
+++ b/site/index.html
@@ -45,8 +45,7 @@
 			<canvas id="myskills" width="250" height="100" ></canvas>
 			</div>
 			<div class="container_text">
-				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
-					Главная страница сейчас не сильно заполненна, но я надеюсь что это временно с:</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae officia temporibus quo quas saepe ut, earum, nostrum explicabo cupiditate facere voluptatem at expedita provident eveniet ex. Laudantium exercitationem maiores repellendus.</p>
 			</div>	
 		</div>
 		<div class="container">
@@ -54,8 +53,7 @@
 				<img src="images/7.jpg" alt="Typing man">
 			</div>
 			<div class="container_text">
-				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
-					Главная страница сейчас не сильно заполненна, но я надеюсь что это временно с:</p>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem minus distinctio sunt eaque rerum deserunt velit repellat, animi modi nesciunt dolore aliquam nobis placeat! Est necessitatibus nihil earum pariatur debitis.</p>
 			</div>
 		</div>
 		<div class="container">
@@ -63,8 +61,7 @@
 				<img src="images/7.jpg" alt="Typing man">
 			</div>
 			<div class="container_text">
-				<p>Добро пожаловать в мой профиль, я Иван, будем знакомы.
-					Главная страница сейчас не сильно заполненна, но я надеюсь что это временно с:</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus facilis praesentium ratione obcaecati est qui voluptate culpa. Est eveniet vero odio atque nostrum inventore. Soluta reiciendis quaerat accusantium deserunt ex!</p>
 			</div>
 		</div>
 </div>
