--- a/figma_1/index.html
+++ b/figma_1/index.html
@@ -40,5 +40,10 @@
         </div>
       </div>
     </header>
+    <main class="main">
+      <section class="intro">
+				
+			</section>
+    </main>
   </body>
 </html>
