--- a/figma_1/index.html
+++ b/figma_1/index.html
@@ -21,7 +21,6 @@
               />
             </a>
           </div>
-
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item">
@@ -192,7 +191,6 @@
           </div>
         </div>
       </section>
-
       <!-- Places end -->
 
       <!-- tours start -->
@@ -240,11 +238,9 @@
           </div>
         </div>
       </div>
-
       <!-- tours end -->
 
       <!-- top places start -->
-
       <section class="top">
         <div class="wrapper-full">
           <h2 class="top_title section-title">Today top places to visit</h2>
@@ -269,15 +265,13 @@
               <p class="top_card-desc">
                 Jump off balcony, onto stranger's head. Chase ball of string
                 hide when guests come over. Being gorgeous with belly side up i
-                could pee on this.
-								Jump off balcony, onto stranger's head. Chase ball of string
-                hide when guests come over. Being gorgeous with belly side up i
-                could pee on this.
-								Jump off balcony, onto stranger's head. Chase ball of string
-                hide when guests come over. Being gorgeous with belly side up i
-                could pee on this.
+                could pee on this. Jump off balcony, onto stranger's head. Chase
+                ball of string hide when guests come over. Being gorgeous with
+                belly side up i could pee on this. Jump off balcony, onto
+                stranger's head. Chase ball of string hide when guests come
+                over. Being gorgeous with belly side up i could pee on this.
               </p>
-							<a href="#!" class="top_card-more">SEE MORE</a>
+              <a href="#!" class="top_card-more">SEE MORE</a>
             </div>
             <div class="top_card">
               <div class="top_card-pic">
@@ -296,15 +290,14 @@
                   </div>
                 </div>
               </div>
-							<p class="top_card-desc">
+              <p class="top_card-desc">
                 Jump off balcony, onto stranger's head. Chase ball of string
                 hide when guests come over. Being gorgeous with belly side up i
-                could pee on this.
-								Jump off balcony, onto stranger's head. Chase ball of string
-                hide when guests come over. Being gorgeous with belly side up i
-                could pee on this.
+                could pee on this. Jump off balcony, onto stranger's head. Chase
+                ball of string hide when guests come over. Being gorgeous with
+                belly side up i could pee on this.
               </p>
-							<a href="#!" class="top_card-more">SEE MORE</a>
+              <a href="#!" class="top_card-more">SEE MORE</a>
             </div>
             <div class="top_card">
               <div class="top_card-pic">
@@ -323,12 +316,12 @@
                   </div>
                 </div>
               </div>
-							<p class="top_card-desc">
+              <p class="top_card-desc">
                 Jump off balcony, onto stranger's head. Chase ball of string
                 hide when guests come over. Being gorgeous with belly side up i
                 could pee on this.
               </p>
-							<a href="#!" class="top_card-more">SEE MORE</a>
+              <a href="#!" class="top_card-more">SEE MORE</a>
             </div>
             <div class="top_card">
               <div class="top_card-pic">
@@ -347,14 +340,14 @@
                   </div>
                 </div>
               </div>
-							<p class="top_card-desc">
+              <p class="top_card-desc">
                 Jump off balcony, onto stranger's head. Chase ball of string
                 hide when guests come over. Being gorgeous with belly side up i
-                could pee on this.
-								Jump off balcony, onto stranger's head. Chase ball of string
-                hide when guests come over. Being gorgeous with belly side up i
+                could pee on this. Jump off balcony, onto stranger's head. Chase
+                ball of string hide when guests come over. Being gorgeous with
+                belly side up i
               </p>
-							<a href="#!" class="top_card-more">SEE MORE</a>
+              <a href="#!" class="top_card-more">SEE MORE</a>
             </div>
             <div class="top_card">
               <div class="top_card-pic">
@@ -373,12 +366,12 @@
                   </div>
                 </div>
               </div>
-							<p class="top_card-desc">
+              <p class="top_card-desc">
                 Jump off balcony, onto stranger's head. Chase ball of string
                 hide when guests come over. Being gorgeous with belly side up i
                 could pee on this.
               </p>
-							<a href="#!" class="top_card-more">SEE MORE</a>
+              <a href="#!" class="top_card-more">SEE MORE</a>
             </div>
             <div class="top_card">
               <div class="top_card-pic">
@@ -397,18 +390,102 @@
                   </div>
                 </div>
               </div>
-							<p class="top_card-desc">
+              <p class="top_card-desc">
                 Jump off balcony, onto stranger's head. Chase ball of string
                 hide when guests come over. Being gorgeous with belly side up i
                 could pee on this.
               </p>
-							<a href="#!" class="top_card-more">SEE MORE</a>
+              <a href="#!" class="top_card-more">SEE MORE</a>
             </div>
           </div>
         </div>
       </section>
-
       <!-- top places end -->
+
+      <!-- videos start -->
+      <div class="videos">
+        <div class="videos_wrapper">
+          <div class="video_item"></div>
+          <iframe
+            class="video_element"
+            src="https://www.youtube.com/embed/IuTDuvYr7f0"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+      <!-- videos end -->
     </main>
+    <!-- footer start -->
+    <footer class="footer">
+      <div class="wrapper">
+        <div class="footer_item">
+          <div class="footer_logo">
+            <img
+              src="./img/svg/odigo-logo-footer.svg"
+              alt="Discover Amazing places in Japan"
+              class="footer_logo-pic"
+            />
+          </div>
+          <nav class="footer_nav">
+            <ul class="footer_menu">
+              <li class="footer_menu-item">
+                <h3 class="footer_menu-title">Company</h3>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">About</a>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">Team</a>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">Careers</a>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">Privacy Policy</a>
+              </li>
+            </ul>
+            <ul class="footer_menu">
+              <li class="footer_menu-item">
+                <h3 class="footer_menu-title">Locations</h3>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">Tokyo</a>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">Kyoto</a>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">Osaka</a>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">Hokkaido</a>
+              </li>
+            </ul>
+            <ul class="footer_menu">
+              <li class="footer_menu-item">
+                <h3 class="footer_menu-title">Social Media</h3>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">Facebook</a>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">Twitter</a>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">Instagram</a>
+              </li>
+              <li class="footer_menu-item">
+                <a href="#!" class="footer_menu-link">Youtube</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
+    <!-- footer end -->
+    <script src="./js/main.js"></script>
   </body>
 </html>
