--- a/figma_1/index.html
+++ b/figma_1/index.html
@@ -36,7 +36,16 @@
                 <a href="#!" class="header__link">Sign in</a>
               </li>
             </ul>
+						<div class="header__nav-close">
+							<span class="header__nav-close-line"></span>
+							<span class="header__nav-close-line"></span>
+						</div>
           </nav>
+					<div class="header_burger burger">
+						<span class="burger_line burger_line_first"></span>
+						<span class="burger_line burger_line_second"></span>
+						<span class="burger_line burger_line_third"></span>
+					</div>
         </div>
       </div>
     </header>
