--- a/figma_1/index.html
+++ b/figma_1/index.html
@@ -159,16 +159,16 @@
                 class="places_card-pic places_card-pic_size_lg"
               />
               <figcaption class="places_card-title">Mount Fuji</figcaption>
-              <a href="#" class="places_card-link"></a>
+              <a href="#!" class="places_card-link"></a>
             </figure>
-            <figure class="places_card places_card_size_lg">
+						<figure class="places_card places_card_size_lg">
               <img
-                src="./img/place-2.jpg"
+                src="./img/place-6.jpg"
                 alt="Kyoto"
                 class="places_card-pic places_card-pic_size_lg"
               />
               <figcaption class="places_card-title">Kyoto</figcaption>
-              <a href="#" class="places_card-link"></a>
+              <a href="#!" class="places_card-link"></a>
             </figure>
             <figure class="places_card places_card_size_sm">
               <img
