--- a/figma_1/index.html
+++ b/figma_1/index.html
@@ -24,16 +24,16 @@
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item">
-                <a href="#!" class="header__link">Articles</a>
+                <a href="#Articles" class="header__link js-scroll">Articles</a>
               </li>
               <li class="header__item">
-                <a href="#!" class="header__link">Locations</a>
+                <a href="#Locations" class="header__link js-scroll">Locations</a>
               </li>
               <li class="header__item">
-                <a href="#!" class="header__link">Videos</a>
+                <a href="#Videos" class="header__link js-scroll">Videos</a>
               </li>
               <li class="header__item">
-                <a href="#!" class="header__link">Sign in</a>
+                <a href="#Sign-in" class="header__link js-scroll">Sign in</a>
               </li>
             </ul>
 						<div class="header__nav-close">
@@ -53,7 +53,7 @@
 
     <main class="main">
       <!-- Intro start -->
-      <section class="intro">
+      <section class="intro" id="Sign-in">
         <div class="wrapper">
           <h1 class="intro__title">Discover Amazing places in Japan</h1>
           <p class="intro__subtitle">
@@ -203,7 +203,7 @@
       <!-- Places end -->
 
       <!-- tours start -->
-      <div class="tours">
+      <div class="tours" id="Articles">
         <div class="wrapper-full">
           <div class="tours_tour tour">
             <div class="tour_pic">
@@ -237,7 +237,7 @@
               </p>
               <a href="#!" class="tour_more">VIEW NEIGHBORHOOD</a>
             </div>
-            <div class="tour_pic">
+            <div class="tour_pic tour_pic_mob-first">
               <img
                 src="./img/tour-2.jpg"
                 alt="Featured Neighborhood: Kyoto’s Arashiyama"
@@ -250,7 +250,7 @@
       <!-- tours end -->
 
       <!-- top places start -->
-      <section class="top">
+      <section class="top" id="Locations">
         <div class="wrapper-full">
           <h2 class="top_title section-title">Today top places to visit</h2>
           <div class="top_cards">
@@ -412,7 +412,7 @@
       <!-- top places end -->
 
       <!-- videos start -->
-      <div class="videos">
+      <div class="videos" id="Videos">
         <div class="videos_wrapper">
           <div class="video_item"></div>
           <iframe
