--- a/figma_1/index.html
+++ b/figma_1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discover Amazing places in Japan</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="stylesheet" href="./css/reset.css" />
   </head>
   <body>
@@ -154,7 +154,7 @@
           <div class="places_cards">
             <figure class="places_card places_card_size_lg">
               <img
-                src="./img/place-1.jpg"
+                src="./img/place-1-min.jpg"
                 alt="Mount Fuji"
                 class="places_card-pic places_card-pic_size_lg"
               />
@@ -163,7 +163,7 @@
             </figure>
 						<figure class="places_card places_card_size_lg">
               <img
-                src="./img/place-6.jpg"
+                src="./img/place-6-min.jpg"
                 alt="Kyoto"
                 class="places_card-pic places_card-pic_size_lg"
               />
@@ -172,7 +172,7 @@
             </figure>
             <figure class="places_card places_card_size_sm">
               <img
-                src="./img/place-3.jpg"
+                src="./img/place-3-min.jpg"
                 alt="Tokyo"
                 class="places_card-pic places_card-pic_size_sm"
               />
@@ -181,7 +181,7 @@
             </figure>
             <figure class="places_card places_card_size_sm">
               <img
-                src="./img/place-4.jpg"
+                src="./img/place-4-min.jpg"
                 alt="Niigata"
                 class="places_card-pic places_card-pic_size_sm"
               />
@@ -190,7 +190,7 @@
             </figure>
             <figure class="places_card places_card_size_sm">
               <img
-                src="./img/place-5.jpg"
+                src="./img/place-5-min.jpg"
                 alt="Sapporo"
                 class="places_card-pic places_card-pic_size_sm"
               />
@@ -208,7 +208,7 @@
           <div class="tours_tour tour">
             <div class="tour_pic">
               <img
-                src="./img/tour-1.jpg"
+                src="./img/tour-1-min.jpg"
                 alt="Prefecture in Focus: Tottori"
                 class="tour_thumb"
               />
@@ -239,7 +239,7 @@
             </div>
             <div class="tour_pic tour_pic_mob-first">
               <img
-                src="./img/tour-2.jpg"
+                src="./img/tour-2-min.jpg"
                 alt="Featured Neighborhood: Kyoto’s Arashiyama"
                 class="tour_thumb"
               />
@@ -257,7 +257,7 @@
             <div class="top_card">
               <div class="top_card-pic">
                 <img
-                  src="./img/top-pic-1.jpg"
+                  src="./img/top-pic-1-min.jpg"
                   alt="NAGOYA"
                   class="top_card-thumb"
                 />
@@ -285,7 +285,7 @@
             <div class="top_card">
               <div class="top_card-pic">
                 <img
-                  src="./img/top-pic-2.jpg"
+                  src="./img/top-pic-2-min.jpg"
                   alt="NIIGATA"
                   class="top_card-thumb"
                 />
@@ -311,7 +311,7 @@
             <div class="top_card">
               <div class="top_card-pic">
                 <img
-                  src="./img/top-pic-3.jpg"
+                  src="./img/top-pic-3-min.jpg"
                   alt="OSAKA"
                   class="top_card-thumb"
                 />
@@ -335,7 +335,7 @@
             <div class="top_card">
               <div class="top_card-pic">
                 <img
-                  src="./img/top-pic-4.jpg"
+                  src="./img/top-pic-4-min.jpg"
                   alt="SAITAMA"
                   class="top_card-thumb"
                 />
@@ -361,7 +361,7 @@
             <div class="top_card">
               <div class="top_card-pic">
                 <img
-                  src="./img/top-pic-5.jpg"
+                  src="./img/top-pic-5-min.jpg"
                   alt="UENO"
                   class="top_card-thumb"
                 />
@@ -385,7 +385,7 @@
             <div class="top_card">
               <div class="top_card-pic">
                 <img
-                  src="./img/top-pic-6.jpg"
+                  src="./img/top-pic-6-min.jpg"
                   alt="SHIBUYA"
                   class="top_card-thumb"
                 />
@@ -495,6 +495,6 @@
       </div>
     </footer>
     <!-- footer end -->
-    <script src="./js/main.js"></script>
+    <script src="./js/main.min.js"></script>
   </body>
 </html>
